Fixed issue where the bottom of categories would not show on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -395,6 +395,7 @@ button {
 .exploreCategoryName {
   font-weight: 500;
   text-align: left;
+  margin-bottom: 6rem;
 }
 
 .category {
